@@ -1,39 +1,32 @@
 package br.com.joorgelm.rinha2023.application.service;
 
-import br.com.joorgelm.rinha2023.application.repository.PessoaRepository;
 import br.com.joorgelm.rinha2023.domain.entity.Pessoa;
 import org.hibernate.ObjectNotFoundException;
 import org.springframework.dao.DataIntegrityViolationException;
 import org.springframework.stereotype.Service;
 
 import java.util.HashSet;
-import java.util.LinkedHashMap;
 import java.util.List;
-import java.util.Optional;
 import java.util.Set;
 import java.util.UUID;
-import java.util.stream.Collectors;
+import java.util.concurrent.ConcurrentHashMap;
 
 @Service
 public class CacheService {
 
     private final Set<String> apelidos;
 
-    private final LinkedHashMap<String, Pessoa> pessoaCache;
+    private final ConcurrentHashMap<String, Pessoa> pessoaCache;
 
     private final SentinelaCacheService sentinelaCacheService;
 
-    private final PessoaRepository pessoaRepository;
-
-    public CacheService(SentinelaCacheService sentinela, PessoaRepository repository) {
+    public CacheService(SentinelaCacheService sentinela) {
         sentinelaCacheService = sentinela;
-        apelidos = new HashSet<>(500);
-        pessoaCache = new LinkedHashMap<>(500);
-        pessoaRepository = repository;
+        apelidos = new HashSet<>(22000);
+        pessoaCache = new ConcurrentHashMap<>(22000);
     }
 
     public boolean apelidoExists(String apelido, boolean sibling) {
-
         if (sibling) return apelidos.contains(apelido);
 
         return apelidos.contains(apelido) || sentinelaCacheService.apelidoExists(apelido);
@@ -42,28 +35,25 @@ public class CacheService {
     public void addPessoa(Pessoa pessoa) {
 
         String apelido = pessoa.getApelido();
-        if (apelidoExists(apelido, true))
+        if (apelidoExists(apelido, false))
             throw new DataIntegrityViolationException(String.format("apelido %s já existe", apelido));
 
         apelidos.add(apelido);
         pessoaCache.put(pessoa.getId().toString(), pessoa);
-
-//        if (apelidos.size() > 500) {
-//            pessoaRepository.customSave(pessoaCache.values().stream().toList());
-//            // todo limpar cache
-//            // todo buscar no bd caso nao encontre na cache
-//        }
     }
 
-    public synchronized List<Pessoa> buscaPorTermo(String termo, boolean sibling) {
-        List<Pessoa> pessoaList = pessoaCache.values()
-                .parallelStream()
-                .filter(pessoa -> pessoa.getApelido().contains(termo)
-                        || pessoa.getNome().contains(termo)
-                        || String.join(" ,", pessoa.getStack()).contains(termo)
-                )
-                .limit(50L)
-                .collect(Collectors.toList());
+    public List<Pessoa> buscaPorTermo(String termo, boolean sibling) {
+        List<Pessoa> pessoaList;
+        synchronized (pessoaCache) {
+            pessoaList = pessoaCache.values()
+                    .parallelStream()
+                    .filter(pessoa -> pessoa.getApelido().contains(termo)
+                            || pessoa.getNome().contains(termo)
+                            || String.join(" ,", pessoa.getStack()).contains(termo)
+                    )
+                    .limit(50L)
+                    .toList();
+        }
 
         if (pessoaList.isEmpty() && sibling) {
             return sentinelaCacheService.buscaPorTermo(termo);
@@ -80,13 +70,10 @@ public class CacheService {
             throw new ObjectNotFoundException(Pessoa.class.getName(), pessoaId);
         }
 
-        Optional<Pessoa> optionalPessoa = Optional.of(sentinelaCacheService.buscaPorId(pessoaId.toString()));
-
-        if (optionalPessoa.isPresent()) {
-            return optionalPessoa.get();
-        }
-
-        throw new ObjectNotFoundException(Pessoa.class.getName(), pessoaId);
+        return sentinelaCacheService.buscaPorId(pessoaId.toString())
+                .orElseThrow(
+                    () -> new ObjectNotFoundException(Pessoa.class.getName(), pessoaId)
+                );
     }
 
     public int contagem(boolean sibling) {
